# cpp-inheritance-schoolHR

./: CMakeLists.txt  main.cpp
Date/: Date.cpp  Date.h
JSON/: JSONConvertible.cpp  JSONConvertible.h  Map.cpp  Map.h
People/: HeadOfDepartment.cpp  HeadOfDepartment.h  Person.cpp  Person.h  Pupil.cpp  Pupil.h  Teacher.cpp  Teacher.h
Utils/: MyUtils.h
